--- a/TryFastEndpointsApp.csproj
+++ b/TryFastEndpointsApp.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FastEndpoints" Version="3.9.1" />
+    <PackageReference Include="FastEndpoints.Swagger" Version="3.9.1" />
+    <PackageReference Include="FastEndpoints.Validation" Version="3.9.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
